Adding new images and content

--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles.css">
     <title>Document</title>
 </head>
 <body>
-    <a href='https://github.com/cyanharlow/purecss-lace' target="_blank">Link to HTML/CSS Picture git hub</a>
-    <a href='https://css-mountain-picture.netlify.app/' target="_blank">My crapy version of a HTML/CSS picture</a>
-    <a href='https://dojo24.github.io/homePage/work.html' target="_blank">Good purposeful project that has all my daily links</a>
-
+    <header>
+        <nav>
+            <a href='https://github.com/cyanharlow/purecss-lace' target="_blank">Link to HTML/CSS Picture git hub</a>
+            <a href='https://css-mountain-picture.netlify.app/' target="_blank">My crapy version of a HTML/CSS picture</a>
+            <a href='https://dojo24.github.io/homePage/work.html' target="_blank">Good purposeful project that has all my daily links</a>
+        </nav>
+    </header>
+    <main>
+        <img src="./images/terminal01.PNG" alt="Terminal"><img src="./images/terminal02.PNG" alt="Terminal"><img src="./images/terminal03.PNG" alt="Terminal"><img src="./images/terminal04.PNG" alt="Terminal"><img src="./images/terminal05.PNG" alt="Terminal"><img src="./images/terminal06.PNG" alt="Terminal"><img src="./images/image (5).png" alt="Git"><img src="./images/git-basic-commands.png" alt="Git"><img src="./images/1_PHuNOhupnXwBWWUtYuieag.jpeg" alt="Git">
+    </main>
 </body>
 </html>
