saving at the end

--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
         </nav>
     </header>
     <main>
-        <img src="./images/terminal01.PNG" alt="Terminal"><img src="./images/terminal02.PNG" alt="Terminal"><img src="./images/terminal03.PNG" alt="Terminal"><img src="./images/terminal04.PNG" alt="Terminal"><img src="./images/terminal05.PNG" alt="Terminal"><img src="./images/terminal06.PNG" alt="Terminal"><img src="./images/image (5).png" alt="Git"><img src="./images/git-basic-commands.png" alt="Git"><img src="./images/1_PHuNOhupnXwBWWUtYuieag.jpeg" alt="Git">
+        <img src="./images/terminal01.PNG" alt="Terminal">
+        <img src="./images/terminal02.PNG" alt="Terminal">
+        <img src="./images/terminal03.PNG" alt="Terminal">
+        <img src="./images/terminal04.PNG" alt="Terminal">
+        <img src="./images/terminal05.PNG" alt="Terminal">
+        <img src="./images/terminal06.PNG" alt="Terminal">
+        <img src="./images/image (5).png" alt="Git">
+        <img src="./images/git-basic-commands.png" alt="Git">
+        <img src="./images/1_PHuNOhupnXwBWWUtYuieag.jpeg" alt="Git">
     </main>
 </body>
 </html>
