--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
         <h1>Terminal / Git / Github</h1>
         <nav>
             <a href="./index.html">Terminal / Git / Github</a>
+            <a href="./collab.html">Open Source and Collaboration</a>
+            <a href="./resources.html">Some Resources</a>
             <a href='https://github.com/cyanharlow/purecss-lace' target="_blank">Link to HTML/CSS Picture git hub</a>
             <a href='https://css-mountain-picture.netlify.app/' target="_blank">My crapy version of a HTML/CSS picture</a>
             <a href='https://dojo24.github.io/homePage/' target="_blank">Good purposeful project that has all my daily links</a>
-            <a href="./collab.html">Open Source and Collaboration</a>
         </nav>
     </header>
     <main>
