--- a/resources.html
+++ b/resources.html
@@ -20,21 +20,11 @@
         </nav>
     </header>
     <main>
-        <h2>Why?</h2>
-        <img src="./images/collab.png" alt="Collaberation">
-        <h2>How?</h2>
-        <a href="https://thecodingtrain.com/" target="_blank">The Coding Train</a>
-        <a href="https://hacktoberfest.digitalocean.com/" target="_blank">Hacktoberfest</a>
-        <h2>The Process</h2>
-        <img src="./images/cloneVsBranch.png" alt="Clone Vs Branch">
-        <img src="./images/gitBranch.png" alt="Git Branch">
-        <img src="./images/gitflow.png" alt="Git Flow">
-        <img src="./images/sharedRepo.png" alt="Shared Repo">
-        <img src="./images/gitflow02.jpeg" alt="Git Flow">
-        <img src="./images/pullRequestFlow.png" alt="Pull Request">
-        <img src="./images/pullRequestFlow02.png" alt="Pull Request">
-        <h2>Whats next?</h2>
-        <img src="./images/githubPages.jpeg" alt="Git Hub Pages">
+        <h1>Add a Mini Portfolio to your github profile</h1>
+        <a href="https://arturssmirnovs.github.io/github-profile-readme-generator/">Readme Generator</a>
+        <a href="https://helper.beedev-services.com/index.html">Helper site (Open for Collaberation)</a>
+        <a href="https://developer-notes.beedev-services.com/">Note Website</a>
+        <a href="https://github.com/dojo24/homePage">Link to the Source Code for the Daily Links</a>
     </main>
 </body>
 </html>
