--- a/collab.html
+++ b/collab.html
@@ -17,6 +17,7 @@
             <a href='https://github.com/cyanharlow/purecss-lace' target="_blank">Link to HTML/CSS Picture git hub</a>
             <a href='https://css-mountain-picture.netlify.app/' target="_blank">My crapy version of a HTML/CSS picture</a>
             <a href='https://dojo24.github.io/homePage/' target="_blank">Good purposeful project that has all my daily links</a>
+            <a href='https://hackmd.io/uv_lg3AdTvymhf5hf4tGQg?view' target='_blank'>HackMd Notes</a>
         </nav>
     </header>
     <main>
