--- a/resources.html
+++ b/resources.html
@@ -4,21 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles.css">
-    <title>Open Source and Collaboration</title>
+    <link rel="stylesheet" href="./css/styles.css">
+    <script src="./js/components/header.js"></script>
+    <script src="./js/components/footer.js"></script>
+    <title>Resources</title>
 </head>
 <body>
     <header>
-        <h1>Collaboration and Open Source</h1>
-        <nav>
-            <a href="./index.html">Terminal / Git / Github</a>
-            <a href="./collab.html">Open Source and Collaboration</a>
-            <a href="./resources.html">Some Resources</a>
-            <a href='https://github.com/cyanharlow/purecss-lace' target="_blank">Link to HTML/CSS Picture git hub</a>
-            <a href='https://css-mountain-picture.netlify.app/' target="_blank">My crapy version of a HTML/CSS picture</a>
-            <a href='https://dojo24.github.io/homePage/' target="_blank">Good purposeful project that has all my daily links</a>
-            <a href='https://hackmd.io/uv_lg3AdTvymhf5hf4tGQg?view' target='_blank'>HackMd Notes</a>
-        </nav>
+        <h1>Resources</h1>
+        <nav-component></nav-component>
     </header>
     <main>
         <h1>Add a Mini Portfolio to your github profile</h1>
@@ -27,5 +21,7 @@
         <a href="https://developer-notes.beedev-services.com/">Note Website</a>
         <a href="https://github.com/dojo24/homePage">Link to the Source Code for the Daily Links</a>
     </main>
+    <footer-component></footer-component>
+    <script src="./js/script.js"></script>
 </body>
 </html>
