--- a/gitCommands.html
+++ b/gitCommands.html
@@ -33,39 +33,43 @@
                     <button class="prev" onclick="plusMainSlides(-1)">&#10094;</button>
         
                     <div class="mainSlides">
-                        <span class="numberText">1/9</span>
+                        <span class="numberText">1/10</span>
                         <img src="./images/flowCommands/slideShowTitle01.png" alt="Title slide">
                     </div>
                     <div class="mainSlides">
-                        <span class="numberText">2/9</span>
+                        <span class="numberText">2/10</span>
                         <img src="./images/flowCommands/commandFlow01.png" alt="">
                     </div>
                     <div class="mainSlides">
-                        <span class="numberText">3/9</span>
+                        <span class="numberText">3/10</span>
+                        <img src="./images/flowCommands/gitCommands.jpeg" alt="">
+                    </div>
+                    <div class="mainSlides">
+                        <span class="numberText">4/10</span>
                         <img src="./images/flowCommands/commandFlow02.png" alt="">
                     </div>
                     <div class="mainSlides">
-                        <span class="numberText">4/9</span>
+                        <span class="numberText">5/10</span>
                         <img src="./images/flowCommands/commands01.jpeg" alt="">
                     </div>
                     <div class="mainSlides">
-                        <span class="numberText">5/9</span>
+                        <span class="numberText">6/10</span>
                         <img src="./images/flowCommands/commands02.webp" alt="">
                     </div>
                     <div class="mainSlides">
-                        <span class="numberText">6/9</span>
+                        <span class="numberText">7/10</span>
                         <img src="./images/flowCommands/commands03.png" alt="">
                     </div>
                     <div class="mainSlides">
-                        <span class="numberText">7/9</span>
+                        <span class="numberText">8/10</span>
                         <h2 class="img">Create your Repositories first - Following these steps (see note on image if you have done git init 1st)</h2>
                     </div>
                     <div class="mainSlides">
-                        <span class="numberText">8/9</span>
+                        <span class="numberText">9/10</span>
                         <img src="./images/init/CreateRepo.png" alt="">
                     </div>
                     <div class="mainSlides">
-                        <span class="numberText">9/9</span>
+                        <span class="numberText">10/10</span>
                         <img src="./images/init/ImportantInformation.png" alt="">
                     </div>
         
@@ -79,25 +83,28 @@
                             <img src="./images/flowCommands/commandFlow01.png" alt="" class="main" onclick="currentMainSlide(2)">
                         </span>
                         <span class="column">
-                            <img src="./images/flowCommands/commandFlow02.png" alt="" class="main" onclick="currentMainSlide(3)">
+                            <img src="./images/flowCommands/gitCommands.jpeg" alt="" class="main" onclick="currentMainSlide(3)">
                         </span>
                         <span class="column">
-                            <img src="./images/flowCommands/commands01.jpeg" alt="" class="main" onclick="currentMainSlide(4)">
+                            <img src="./images/flowCommands/commandFlow02.png" alt="" class="main" onclick="currentMainSlide(4)">
                         </span>
                         <span class="column">
-                            <img src="./images/flowCommands/commands02.webp" alt="" class="main" onclick="currentMainSlide(5)">
+                            <img src="./images/flowCommands/commands01.jpeg" alt="" class="main" onclick="currentMainSlide(5)">
                         </span>
                         <span class="column">
-                            <img src="./images/flowCommands/commands03.png" alt="" class="main" onclick="currentMainSlide(6)">
+                            <img src="./images/flowCommands/commands02.webp" alt="" class="main" onclick="currentMainSlide(6)">
                         </span>
                         <span class="column">
-                            <h2 class="main" onclick="currentMainSlide(7)">Create your Repositories first - Following these steps (see note on image if you have done git init 1st)</h2>
+                            <img src="./images/flowCommands/commands03.png" alt="" class="main" onclick="currentMainSlide(7)">
                         </span>
                         <span class="column">
-                            <img src="./images/init/CreateRepo.png" alt="" onclick="currentMainSlide(8)" class="main">
+                            <h2 class="main" onclick="currentMainSlide(8)">Create your Repositories first - Following these steps (see note on image if you have done git init 1st)</h2>
                         </span>
                         <span class="column">
-                            <img src="./images/init/ImportantInformation.png" alt="" onclick="currentMainSlide(9)" class="main">
+                            <img src="./images/init/CreateRepo.png" alt="" onclick="currentMainSlide(9)" class="main">
+                        </span>
+                        <span class="column">
+                            <img src="./images/init/ImportantInformation.png" alt="" onclick="currentMainSlide(10)" class="main">
                         </span>
                     </div>
                 </div>
